coded correctly the check for the port number for conroller
coded correctly the check for the port number for conroller

--- a/uniFiAP.indigoPlugin/Contents/changeLog.txt
+++ b/uniFiAP.indigoPlugin/Contents/changeLog.txt
@@ -1,3 +1,9 @@
+changes in V 7.34.311 @ 2021-01-20
+==================  
+   
+1. coded correctly the check for the port number 
+
+
 changes in V 7.34.310 @ 2021-01-20
 ==================  
    
