--- a/uniFiAP.indigoPlugin/Contents/changeLog.txt
+++ b/uniFiAP.indigoPlugin/Contents/changeLog.txt
@@ -1,3 +1,10 @@
+changes in V 7.34.316 @ 2021-01-26
+==================  
+   
+1. clean up code and re-posting, previous upload was corrupt 
+  
+
+
 changes in V 7.34.315 @ 2021-01-24
 ==================  
    
