added http get for client info ...
1. added option to ALSO use unifi controller db info for UP --> down
   enable in config for all/per-device/ non  unifi cleint devices
   if per-device: edit unifi client device in indigo and set to on/off
   it is doing an https get request to /stat/alluser and checks for last_seen
   if internal lastUp is expired it will check if last seen is later and will overwrite ie extending the expiration timer
2. fixed some spelling and removed options for read xx every yy secs, all set to 60 / 40 now fixed
3. made several options fixed = removed from config
4. tuned debug statements for dict/ message reads
5. fixed memory leak in getmessages
6. added debug statement for unifi controller bad json object return
6. added timeout =(3.,10.) to http -requests
7. manage debug logs in case of failure for ssh and http
8. added forceed restart every xx hours for listener as option in  config / advanced

--- a/uniFiAP.indigoPlugin/Contents/changeLog.txt
+++ b/uniFiAP.indigoPlugin/Contents/changeLog.txt
@@ -1,4 +1,4 @@
-changes in V 7.37.337 @ 2021-02-26
+changes in V 7.37.340 @ 2021-02-28
 ==================  
    
 1. added option to ALSO use unifi controller db info for UP --> down
@@ -12,6 +12,8 @@ changes in V 7.37.337 @ 2021-02-26
 5. fixed memory leak in getmessages 
 6. added debug statement for unifi controller bad json object return
 6. added timeout =(3.,10.) to http -requests 
+7. manage debug logs in case of failure for ssh and http
+8. added forceed restart every xx hours for listener as option in  config / advanced
 
 changes in V 7.36.326 @ 2021-02-19
 ==================  
