--- a/uniFiAP.indigoPlugin/Contents/changeLog.txt
+++ b/uniFiAP.indigoPlugin/Contents/changeLog.txt
@@ -1,3 +1,9 @@
+changes in V 7.37.342 @ 2021-03-02
+==================  
+1. fixed:  in Line 7608 has error='module' object has no attribute 'exc_traceback'
+
+ 
+
 changes in V 7.37.341 @ 2021-03-02
 ==================  
    
